test/custom/inference/good/typeclass_annotated_strong_predicate.mlt
class K 'a { k : 'a }
class L 'a { l : 'a -> 'a -> 'a }
class K 'a, L 'a => Y 'a { y : 'a }

let ['a] [Y 'a] f : 'a -> 'a = fun x -> l x k
(* At least one type annotation is necessary *)
